@@ -1,5 +1,7 @@
 package finku.ukim.mk.eduai.controller;
 import finku.ukim.mk.eduai.dto.ProfessorReportDto;
+import finku.ukim.mk.eduai.exception.ResourceNotFoundException;
+import finku.ukim.mk.eduai.model.Test;
 import finku.ukim.mk.eduai.service.impl.PdfExportService;
 import finku.ukim.mk.eduai.service.impl.ProfessorReportService;
 import finku.ukim.mk.eduai.service.impl.TestService;
@@ -10,6 +12,9 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.lang.module.ResolutionException;
+import java.util.List;
 
 @RestController
 @RequestMapping("/professor-report")
@@ -28,8 +33,11 @@ public class ProfessorReportController {
     @GetMapping("/{subjectId}")
     public ResponseEntity<ProfessorReportDto> getProfessorReport(
             @PathVariable Long subjectId) {
-        ProfessorReportDto report = professorReportService.getProfessorReport(subjectId, testService.getTestsForSubject(subjectId).getLast().getId());
-        return ResponseEntity.ok(report);
+        List<Test> tests = testService.getTestsForSubject(subjectId);
+        if (tests.isEmpty())
+            throw new ResourceNotFoundException("No tests found for subject");
+        Test lastTest = tests.get(tests.size() - 1);
+        return ResponseEntity.ok(professorReportService.getProfessorReport(subjectId, lastTest.getId()));
     }
 
     @GetMapping(value = "{subjectId}/{testId}/pdf", produces = MediaType.APPLICATION_PDF_VALUE)
